--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jsm_saas_app",
+  "name": "voice_lms",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,6 @@
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
     "@hookform/resolvers": "^5.0.1",
-    "@jsmastery/utils": "^1.0.2",
-    "@opentelemetry/core": "^2.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
