replace VAPI with gemini

--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.4",
+    "@google-cloud/text-to-speech": "^5.7.0",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
     "@supabase/supabase-js": "^2.49.7",
-    "@vapi-ai/web": "^2.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "import-in-the-middle": "^1.14.2",
